--- a/src/Leaderboard/LeaderBoardPanel.form
+++ b/src/Leaderboard/LeaderBoardPanel.form
@@ -247,16 +247,16 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="mTeamLeaderboardTable">
                   <Properties>
+                    <Property name="autoCreateRowSorter" type="boolean" value="true"/>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="1">
-                        <Column editable="true" title="Ranking" type="java.lang.Object"/>
+                      <Table columnCount="4" rowCount="1">
                         <Column editable="true" title="Team Name" type="java.lang.Object"/>
                         <Column editable="true" title="Team Captain" type="java.lang.Object"/>
-                        <Column editable="true" title="Avg Exp" type="java.lang.Object"/>
-                        <Column editable="true" title="Level" type="java.lang.Object"/>
-                        <Column editable="true" title="Members" type="java.lang.Object"/>
+                        <Column editable="true" title="Average Experience" type="java.lang.Object"/>
+                        <Column editable="true" title="Number of Members" type="java.lang.Object"/>
                       </Table>
                     </Property>
+                    <Property name="toolTipText" type="java.lang.String" value=""/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -280,8 +280,8 @@
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="2">
-                    <StringItem index="0" value="Avg Exp"/>
-                    <StringItem index="1" value="Level"/>
+                    <StringItem index="0" value="Average Experience"/>
+                    <StringItem index="1" value="Number of Members"/>
                   </StringArray>
                 </Property>
               </Properties>
