--- a/src/MissionHolder/HuntingMission.form
+++ b/src/MissionHolder/HuntingMission.form
@@ -191,7 +191,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Difficult:"/>
+            <Property name="text" type="java.lang.String" value="Difficulty:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
